Fixes Alignment of Dashboard Buttons

--- a/packages/dashboard/src/scss/grid.scss
+++ b/packages/dashboard/src/scss/grid.scss
@@ -309,6 +309,8 @@ $red: #f74242;
   height: 20px;
   cursor: pointer;
   user-select: none;
+  margin-left: 0.5em;
+  margin-top: 5px;
 
   svg {
     fill: $mediumGray;
